tests/baselines/reference/fatarrowfunctionsErrors.errors.txt
==== tests/cases/compiler/fatarrowfunctionsErrors.ts (14 errors) ====
    foo((...Far:any[])=>{return 0;})
    ~~~
!!! error TS2095: Could not find symbol 'foo'.
    foo((1)=>{return 0;}); 
           ~~
!!! error TS1005: ',' expected.
    ~~~
!!! error TS2095: Could not find symbol 'foo'.
    foo((x?)=>{return x;})
    ~~~
!!! error TS2095: Could not find symbol 'foo'.
    foo((x=0)=>{return x;})
    ~~~
!!! error TS2095: Could not find symbol 'foo'.
    var y = x:number => x*x;
             ~
!!! error TS1005: ',' expected.
                     ~~
!!! error TS1005: ';' expected.
            ~
!!! error TS2095: Could not find symbol 'x'.
                        ~
!!! error TS2095: Could not find symbol 'x'.
                          ~
!!! error TS2095: Could not find symbol 'x'.
    false? (() => null): null;
    
    // missing fatarrow
    var x1 = () :void {};
                      ~
!!! error TS1005: '=>' expected.
    var x2 = (a:number) :void {};
                              ~
!!! error TS1005: '=>' expected.
    var x3 = (a:number) {};
                        ~
!!! error TS1005: '=>' expected.
    var x4= (...a: any[]) { };
                          ~
!!! error TS1005: '=>' expected.